and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== fixed

=== added
* https://github.com/docToolchain/docToolchain/pull/1389[exportEA: Add additional option to set the image format]
* https://github.com/docToolchain/docToolchain/pull/1391[#1391: Update collectIncludes.gradle]

=== changed

== 3.3.1 - 2024-03-01

=== fixed

* https://github.com/docToolchain/docToolchain/issues/1369[#1359: publishToConfluence - Something went wrong]
* https://github.com/docToolchain/docToolchain/issues/1372[#1372: publishToConfluence: java.io.FileNotFoundException]
* https://github.com/docToolchain/docToolchain/pull/1379[publishToConfluence: Fix Confluence APIv2 Cursor Logic]

=== added

=== changed

== 3.3 - 2024-02-17

=== fixes

* [Noticket] Enforce x86 Java on macOS as long as jbake does not support arm64 processors
* [Noticket] Avoid usage of an arbitrary `arch` binary/script on `+${PATH}+` instead of the desired `/usr/bin/arch` on macOS.
* https://github.com/docToolchain/docToolchain/issues/1353[#1353: docker: Problem with 3.x images and dependencies?]
* https://github.com/docToolchain/docToolchain/issues/1239[#1239: Execute a custom asciidoctor converter for generateHTML]
* https://github.com/docToolchain/docToolchain/issues/1290[#1290: Custom ruby extension for PDF generation]
* https://github.com/docToolchain/docToolchain/issues/1355[#1355: publishToConfluence - some code blocks are generated as txt instead of requested language and loose linebreaks]
* https://github.com/docToolchain/docToolchain/issues/1349[#1349: publishToConfluence - a source code block containing template parameters has formatting problems]

=== added

=== changed

* you can now specify another dockerhub via DTC_DOCKER_PREFIX

== 3.2.2 - 2024-01-18

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1335[#1335 publishToConfluence throws exception when uploading attachments in v3.2.0]