@@ -12,8 +12,11 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 === added
 * https://github.com/docToolchain/docToolchain/pull/1389[exportEA: Add additional option to set the image format]
 * https://github.com/docToolchain/docToolchain/pull/1391[#1391: Update collectIncludes.gradle]
+* 
 
 === changed
+
+* removed link to plausible.io on docs site
 
 == 3.3.1 - 2024-03-01
 
